<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.add_alarm.form.ActAddDesc">

    <data>

        <variable
            name="model"
            type="com.erif.alarmmanager.model.add_alarm.form.ModelActAddDesc" />

        <variable
            name="viewModel"
            type="com.erif.alarmmanager.view_model.add_alarm.form.VMActAddDesc" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/AppbarStyle">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/act_add_desc_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/description"
                style="@style/ToolbarTheme"
                app:navigationIcon="@drawable/ic_close"/>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/description_input_height"
            android:layout_marginTop="@dimen/description_input_margin_top"
            android:padding="@dimen/margin_normal"
            android:background="@drawable/bg_form"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginStart="@dimen/margin_safe_area"
            android:layout_marginEnd="@dimen/margin_safe_area">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:textSize="@dimen/text_size"
                android:text="@{model.desc}"
                app:addTextChangedListener="@{model.descListener()}"
                android:textColor="@color/black"
                android:hint="@string/description_write"
                android:importantForAutofill="no" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_description"
            android:layout_marginStart="@dimen/margin_safe_area"
            android:layout_marginEnd="@dimen/margin_safe_area"
            android:layout_marginBottom="@dimen/margin_xSmall"
            android:onClick="@{() -> viewModel.onClickSave()}"
            android:layout_gravity="bottom"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>