<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.add_alarm.FrgAddAlarmBottomSheet">

    <data>

        <variable
            name="model"
            type="com.erif.alarmmanager.model.add_alarm.ModelFrgAddAlarm" />

        <variable
            name="viewModel"
            type="com.erif.alarmmanager.view_model.add_alarm.VMFrgAddAlarm" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPage">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="@dimen/margin_xSmall"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/bg_swipe"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/configure_alarm"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.onClickSave()}">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_check_black"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Ringtone-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_xSmall"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.onClickRingtone()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ringtone"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="end|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{model.ringtoneTitle}"
                        android:includeFontPadding="false"
                        android:textColor="@color/subtitleColor"
                        android:textSize="@dimen/text_size" />

                    <ImageView
                        android:layout_width="@dimen/icon_size_more"
                        android:layout_height="@dimen/icon_size_more"
                        android:layout_marginStart="@dimen/margin_xSmall"
                        android:src="@drawable/ic_arrow_more_grey"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginStart="@dimen/margin_xSmall"
                android:layout_marginEnd="@dimen/margin_xSmall"
                android:background="@color/colorLine"/>

            <!--Title-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_xSmall"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.onClickTitle()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_form"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="end|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="280dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textColor="@color/subtitleColor"
                        android:text="@{model.alarmTitle}"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/text_size" />

                    <ImageView
                        android:layout_width="@dimen/icon_size_more"
                        android:layout_height="@dimen/icon_size_more"
                        android:layout_marginStart="@dimen/margin_xSmall"
                        android:src="@drawable/ic_arrow_more_grey"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginStart="@dimen/margin_xSmall"
                android:layout_marginEnd="@dimen/margin_xSmall"
                android:background="@color/colorLine"/>

            <!--Desc-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_xSmall"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.onClickDesc()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_form"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="end|center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{model.alarmDesc}"
                        android:maxWidth="280dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textColor="@color/subtitleColor"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/text_size" />

                    <ImageView
                        android:layout_width="@dimen/icon_size_more"
                        android:layout_height="@dimen/icon_size_more"
                        android:layout_marginStart="@dimen/margin_xSmall"
                        android:src="@drawable/ic_arrow_more_grey"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/border_size"
                android:layout_marginStart="@dimen/margin_xSmall"
                android:layout_marginEnd="@dimen/margin_xSmall"
                android:background="@color/colorLine"/>

            <!--Vibrate-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_xSmall"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{() -> viewModel.onClickVibrate()}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate_while_playing"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SwitchTheme"
                    android:checked="@{model.vibrate == 1 ? true : false}"
                    app:setSwitchListener="@{viewModel.switchListener()}"
                    android:layout_gravity="end|center_vertical"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </FrameLayout>

        </LinearLayout>

        <!--Time Picker-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/hour_picker_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:includeFontPadding="false"
                android:layout_marginEnd="@dimen/margin_safe_area"
                android:textSize="22sp"
                android:layout_toStartOf="@id/number_picker"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                tools:ignore="RelativeOverlap" />

            <NumberPicker
                android:id="@+id/number_picker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:setNumberPicker="@{23}"
                android:layout_centerHorizontal="true"
                app:setNumberPickerValue="@{model.alarmDuration}"
                app:setNumberPickerListener="@{viewModel.pickerListener()}"
                android:theme="@style/AppTheme.Picker"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/number_picker"
                android:includeFontPadding="false"
                android:layout_marginStart="@dimen/margin_safe_area"
                android:textSize="20sp"
                android:textColor="@color/subtitleColor"/>

        </RelativeLayout>

    </LinearLayout>

</layout>